--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <div class="social-media">
                 <a href="https://www.youtube.com/channel/UCclpvLvNJ3ue8D6iCFU0Dsw" target="_blank"> <i class="bx bxl-youtube"></i></a>
                 <a href="https://github.com/surya-joe" target="_blank"> <i class="bx bxl-github"></i></a>
-                <a href="#"> <i class="bx bxl-facebook"></i></a>
-                <a href="#"> <i class="bx bxl-linkedin"></i></a>
+                <!-- <a href="#"> <i class="bx bxl-facebook"></i></a> -->
+                <a href="https://www.linkedin.com/in/surya-j-3676a225a/" target="_blank"> <i class="bx bxl-linkedin"></i></a>
             </div>
-            <a href="https://drive.google.com/drive/u/1/my-drive" target='_blank' id="cv-btn" class="cv-link">Download CV</a>
+            <a href="./assets/files/SURYA  Resume(2022).pdf" target='_blank' id="cv-btn" class="cv-link">Download CV</a>
         </div>
         <div class="home-pic">
             <img src="./assets/images/home.png" alt="home-pic">
@@ -69,7 +69,7 @@
 
         <div class="card-wrapper">
 
-            <div class="card">
+            <div class="card" id="planetTsk">
                 <img src="./assets/images/planetInfo.png" alt="">
                 <div class="card-content">
                     <div class="content-wrapper">
@@ -79,7 +79,7 @@
                 </div>
             </div>
             
-            <div class="card">
+            <div class="card" id="loveTsk">
                 <img src="./assets/images/love-meter.png" alt="">
                 <div class="card-content">
                     <div class="content-wrapper">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" id="translatorTsk">
                 <img src="./assets/images/googleTranslator.png" alt="">
                 <div class="card-content">
                     <div class="content-wrapper">
@@ -148,15 +148,15 @@
                 <img src="./assets/images/physics.svg" alt="anchor">
                 <div class="service-content">
                     <h3>Developement</h3>
-                    <p>I can develope whatever my client demands, if the client request a project in technologies the i'm not familiar, then i'm ready to learn and build projects for them.</p>
+                    <p>I can develope whatever my client demands, if the client request a project in technologies i'm not familiar, then i'm ready to learn and fulfill the requirements.</p>
                 </div>
             </div>
 
             <div class="service-card">
                 <img src="./assets/images/contact.svg" alt="anchor">
                 <div class="service-content">
-                    <h3>Additional Qualities</h3>
-                    <p>I can understand english very well, so communicating in english will be a piece of cake. I have good typing speed of 40 - 50 words per minute</p>
+                    <h3>Additional skills</h3>
+                    <p>I can understand english very well, so communicating in english will be a piece of cake. I have good typing speed of 40 - 50 words per minute.</p>
                 </div>
             </div>
         </div>
