--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="about-content">
             <h3>I'm a Developer</h3>
 			<h2>I Can Design & Develope Anything You Want</h2>
-			<p>I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design & development process, from discussion and collaboration.</p>
+			<p>I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design & development process, for discussion and collaboration.</p>
 			<a href="#" class="btn">Hire Me</a>
         </div>
     </section>
